
v0.4.4
------

.getPalette() request from the terminal (if supported) the current 16 colors palette in use.



v0.4.3
------

Now the lib is aware of the default VGA palette for the Linux Console.


v0.4.2
------

Bugfix: .getDetectedTerminal() do not issue error anymore if no terminal was detected, it simply returns
the default terminal.
New: the HSL cylender coordinate is now used to pick up the closest color register match for RGB.
Status of the lib is now BETA.


v0.4.1
------

New high-level function: .getColorRegister()


v0.4.0
------

.color256rgb() -> .colorRgb()
.bgColor256rgb() -> .bgColororRgb()
.color256gray() -> .colorGrayscale()
.bgColor256gray() -> .bgColorGrayscale()

Fallback for 256 colors, if not supported by the terminal, it picks the closest color in the 16 colors.
.setCursorColor() & .setCursorColorRgb() now work fine with the Linux Console.


v0.3.8
------

.setCursorColor() & .setCursorColorRgb() to change the color of the cursor.


v0.3.4 - v0.3.7
---------------

Dependency hell.


v0.3.3
------

Upgraded dependencies (async-kit, tree-kit, string-kit).