@@ -30,13 +30,18 @@ var tree = require( 'tree-kit' ) ;
 var xterm256 = require( './xterm-256color.js' ) ;
 var gnome = require( './gnome.js' ) ;
 
+var	esc = tree.extend( { own: true } , Object.create( xterm256.esc ) , gnome.esc , {
+	
+	color24bits: { on: '%D%D%D' , na: true } ,	// not capable
+	bgColor24bits: { on: '%D%D%D' , na: true }	// not capable
+} ) ;
 
 
 // So far, we derivate from xterm-256color and then just add specific things (owned properties)
 // of gnome, thus we achieve a clean inheritance model without duplicated code.
 
 module.exports = {
-	esc: tree.extend( { own: true } , Object.create( xterm256.esc ) , gnome.esc ) ,
+	esc: esc ,
 	keymap: tree.extend( { own: true } , Object.create( xterm256.keymap ) , gnome.keymap ) ,
 	handler: tree.extend( { own: true } , Object.create( xterm256.handler ) , gnome.handler ) ,
 	colorRegister: gnome.colorRegister
