@@ -32,6 +32,18 @@ var konsole = require( './konsole.js' ) ;
 
 
 
+// Remove colors
+var defaultColor = '\x1b[39m' ; // back to the default color, most of time it is the same than .white
+var bgDefaultColor = '\x1b[49m' ;   // back to the default color, most of time it is the same than .bgBlack
+
+
+var esc = tree.extend( { own: true } , Object.create( xterm256.esc ) , konsole.esc , {
+	color24bits: { on: '\x1b[38;2;%u;%u;%um' , off: defaultColor } ,
+	bgColor24bits: { on: '\x1b[48;2;%u;%u;%um' , off: bgDefaultColor } ,
+} ) ;
+
+
+
 // So far, we derivate from xterm-256color and then just add specific things (owned properties)
 // of konsole, thus we achieve a clean inheritance model without duplicated code.
 
