@@ -232,6 +232,8 @@ var esc = {
 	setDefaultBgColorRgb: { on: '\x1b]11;#%x%x%x\x07' } ,	// ->|TODOC|<- not widely supported
 	setColorLL: { on: '\x1b]4;%u;#%x%x%x\x07' } ,
 	setFont: { on: '\x1b]50;%s\x07' } ,	// ->|TODOC|<- rarely supported
+	color24bits: { on: '%D%D%D' , na: true } ,	// not capable
+	bgColor24bits: { on: '%D%D%D' , na: true } ,	// not capable
 	
 	color256: {
 		on: '%[color256:%a]' ,
