@@ -478,18 +478,20 @@ var pseudoEsc = {
 			if ( typeof r !== 'number' || typeof g !== 'number' || typeof b !== 'number' ) { return '' ; }
 			if ( r < 0 || r > 255 || g < 0 || g > 255 || b < 0 || b > 255 ) { return '' ; }
 			
-			if ( this.root.esc.color256.na || this.root.esc.color256.fb )
+			if ( ! this.root.esc.color24bits.na && ! this.root.esc.color24bits.fb )
 			{
-				// The terminal does not support 256 colors, fallback
-				c = this.root.defaultRegisterForRgb( r , g , b , 0 , 15 ) ;
-				return string.format.call( this.root.escHandler , this.root.esc.color.on , c ) ;
+				// The terminal supports 24bits! Yeah!
+				return string.format.call( this.root.escHandler , this.root.esc.color24bits.on , r , g , b ) ;
 			}
-			else
+			
+			if ( ! this.root.esc.color256.na && ! this.root.esc.color256.fb )
 			{
+				// The terminal supports 256 colors
+				
 				// Convert to 0..5 range
-				r = Math.floor( r * 5 / 255 + adjustFloor ) ;
-				g = Math.floor( g * 5 / 255 + adjustFloor ) ;
-				b = Math.floor( b * 5 / 255 + adjustFloor ) ;
+				r = Math.floor( r * 6 / 256 + adjustFloor ) ;
+				g = Math.floor( g * 6 / 256 + adjustFloor ) ;
+				b = Math.floor( b * 6 / 256 + adjustFloor ) ;
 				
 				c = Math.floor( 16 + r * 36 + g * 6 + b ) ;
 				
@@ -498,6 +500,10 @@ var pseudoEsc = {
 				
 				return string.format.call( this.root.escHandler , this.root.esc.color256.on , c ) ;
 			}
+			
+			// The terminal does not support 256 colors, fallback
+			c = this.root.defaultRegisterForRgb( r , g , b , 0 , 15 ) ;
+			return string.format.call( this.root.escHandler , this.root.esc.color.on , c ) ;
 		}
 	} ,
 	
@@ -511,26 +517,32 @@ var pseudoEsc = {
 			if ( typeof r !== 'number' || typeof g !== 'number' || typeof b !== 'number' ) { return '' ; }
 			if ( r < 0 || r > 255 || g < 0 || g > 255 || b < 0 || b > 255 ) { return '' ; }
 			
-			if ( this.root.esc.bgColor256.na || this.root.esc.bgColor256.fb )
+			if ( ! this.root.esc.bgColor24bits.na && ! this.root.esc.bgColor24bits.fb )
 			{
-				// The terminal does not support 256 colors, fallback
-				c = this.root.defaultRegisterForRgb( r , g , b , 0 , 15 ) ;
-				return string.format.call( this.root.escHandler , this.root.esc.bgColor.on , c ) ;
+				// The terminal supports 24bits! Yeah!
+				return string.format.call( this.root.escHandler , this.root.esc.bgColor24bits.on , r , g , b ) ;
 			}
-			else
+			
+			if ( ! this.root.esc.bgColor256.na && ! this.root.esc.bgColor256.fb )
 			{
+				// The terminal supports 256 colors
+				
 				// Convert to 0..5 range
-				r = Math.floor( r * 5 / 255 + adjustFloor ) ;
-				g = Math.floor( g * 5 / 255 + adjustFloor ) ;
-				b = Math.floor( b * 5 / 255 + adjustFloor ) ;
+				r = Math.floor( r * 6 / 256 + adjustFloor ) ;
+				g = Math.floor( g * 6 / 256 + adjustFloor ) ;
+				b = Math.floor( b * 6 / 256 + adjustFloor ) ;
 				
 				c = Math.floor( 16 + r * 36 + g * 6 + b ) ;
 				
 				// min:16 max:231
-				if ( c < 16 || c > 231 ) { return '' ; }
+				//if ( c < 16 || c > 231 ) { return '' ; }
 				
 				return string.format.call( this.root.escHandler , this.root.esc.bgColor256.on , c ) ;
 			}
+			
+			// The terminal does not support 256 colors, fallback
+			c = this.root.defaultRegisterForRgb( r , g , b , 0 , 15 ) ;
+			return string.format.call( this.root.escHandler , this.root.esc.bgColor.on , c ) ;
 		}
 	} ,
 	
@@ -544,16 +556,18 @@ var pseudoEsc = {
 			if ( typeof g !== 'number' ) { return '' ; }
 			if ( g < 0 || g > 255 ) { return '' ; }
 			
-			if ( this.root.esc.color256.na || this.root.esc.color256.fb )
+			if ( ! this.root.esc.color24bits.na && ! this.root.esc.color24bits.fb )
 			{
-				// The terminal does not support 256 colors, fallback
-				c = this.root.defaultRegisterForRgb( g , g , g , 0 , 15 ) ;
-				return string.format.call( this.root.escHandler , this.root.esc.color.on , c ) ;
+				// The terminal supports 24bits! Yeah!
+				return string.format.call( this.root.escHandler , this.root.esc.color24bits.on , g , g , g ) ;
 			}
-			else
+			
+			if ( ! this.root.esc.color256.na && ! this.root.esc.color256.fb )
 			{
+				// The terminal supports 256 colors
+				
 				// Convert to 0..25 range
-				g = Math.floor( g * 25 / 255 + adjustFloor ) ;
+				g = Math.floor( g * 26 / 256 + adjustFloor ) ;
 				
 				if ( g < 0 || g > 25 ) { return '' ; }
 				
@@ -563,6 +577,10 @@ var pseudoEsc = {
 				
 				return string.format.call( this.root.escHandler , this.root.esc.color256.on , c ) ;
 			}
+			
+			// The terminal does not support 256 colors, fallback
+			c = this.root.defaultRegisterForRgb( g , g , g , 0 , 15 ) ;
+			return string.format.call( this.root.escHandler , this.root.esc.color.on , c ) ;
 		}
 	} ,
 	
@@ -576,17 +594,17 @@ var pseudoEsc = {
 			if ( typeof g !== 'number' ) { return '' ; }
 			if ( g < 0 || g > 255 ) { return '' ; }
 			
-			if ( this.root.esc.bgColor256.na || this.root.esc.bgColor256.fb )
+			if ( ! this.root.esc.bgColor24bits.na && ! this.root.esc.bgColor24bits.fb )
 			{
-				// The terminal does not support 256 colors, fallback
-				c = this.root.defaultRegisterForRgb( g , g , g , 0 , 15 ) ;
-				return string.format.call( this.root.escHandler , this.root.esc.bgColor.on , c ) ;
+				// The terminal supports 24bits! Yeah!
+				return string.format.call( this.root.escHandler , this.root.esc.bgColor24bits.on , g , g , g ) ;
 			}
-			else
+			
+			if ( ! this.root.esc.bgColor256.na && ! this.root.esc.bgColor256.fb )
 			{
 				// Convert to 0..25 range
-				//console.log( '-- ' , g , g * 25 / 255 , Math.floor( g * 25 / 255 ) , Math.floor( g * 25 / 255 + adjustFloor ) ) ;
-				g = Math.floor( g * 25 / 255 + adjustFloor ) ;
+				//console.log( '-- ' , g , g * 26 / 256 , Math.floor( g * 26 / 256 ) , Math.floor( g * 26 / 256 + adjustFloor ) ) ;
+				g = Math.floor( g * 26 / 256 + adjustFloor ) ;
 				
 				if ( g < 0 || g > 25 ) { return '' ; }
 				
@@ -596,6 +614,10 @@ var pseudoEsc = {
 				
 				return string.format.call( this.root.escHandler , this.root.esc.bgColor256.on , c ) ;
 			}
+			
+			// The terminal does not support 256 colors, fallback
+			c = this.root.defaultRegisterForRgb( g , g , g , 0 , 15 ) ;
+			return string.format.call( this.root.escHandler , this.root.esc.bgColor.on , c ) ;
 		}
 	}
 	
